# Lumenpulse

./: .gitignore
.github/workflows/: backend.yml
apps/backend/: package-lock.json
apps/backend/scripts/: run_migrations.ts
apps/backend/src/: app.module.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  (+3 more)
apps/data-processing/: .pre-commit-config.yaml  README_API.md  demo_anomaly_detection.py  demo_cache.py  pyproject.toml  requirements.txt  run_checks.sh  start_api.py  test_pipeline.py
apps/data-processing/examples/: market_analysis_example.py  news_fetcher_example.py  stellar_fetcher_example.py
apps/data-processing/scripts/: backfill.py
apps/data-processing/src/: alertbot.py  anomaly_detector.py  cache_manager.py  database.py  fetchers.py  main.py  scheduler.py  sentiment.py  trends.py
apps/data-processing/src/analytics/: __init__.py  market_analyzer.py
apps/data-processing/src/api/: server.py
apps/data-processing/src/ingestion/: __init__.py  news_fetcher.py  stellar_fetcher.py
apps/data-processing/tests/: conftest.py  test_alertbot.py  test_anomaly_detector.py  test_cache.py  test_market_analyzer.py  test_news_fetcher.py  test_stellar_fetcher.py
apps/data-processing/tests/integration/: test_integration_sample.py
apps/data-processing/tests/unit/: test_main.py
apps/mobile/: app.json  package-lock.json  package.json
apps/mobile/app/: +not-found.tsx  _layout.tsx
apps/mobile/components/: ProtectedRoute.tsx
apps/mobile/lib/: storage.ts
apps/webapp/: next.config.js
apps/webapp/lib/: auth-service.ts
(+51 files in other folders)
